--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,3 +1,12 @@
+<div style="padding-top:50px;" class="parallax-container">
+    <div parallax><img src="img/Boulder_Mountains_Idaho.jpg"></div>
+    <div style="padding-left:20px;color:white;font-weight:bold;text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;">
+        <h1>University of Colorado</h1>
+        <h3>PhD Student</h3>
+        <h3>Department of Computer Science</h3>
+    </div>
+</div>
+
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque lectus ex, non mollis nibh vestibulum et. Morbi a tellus sollicitudin, ornare ante quis, pulvinar orci. Nunc dignissim, tellus vel commodo venenatis, nisl mi cursus nisi, a sodales magna orci a quam. Nam quis dui sit amet ex consectetur maximus id tincidunt odio. Curabitur quis euismod sem, sed luctus orci. Vivamus mattis metus non ipsum tempus, quis aliquet urna lobortis. Sed dignissim quis ex eu fermentum. Praesent finibus ultrices mi ut elementum. Ut fermentum eleifend magna, tempus imperdiet tortor sollicitudin non.
 </p>
