Footer and experience additions

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -14,13 +14,15 @@
       </div>
       <div class="card-stacked">
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
+          <p>I am a PhD Student at the University of Colorado-Boulder in the Department of Computer Science.  My passion is in virtual and augmented reality work, specifically seeking to enable and create useful applications with augmented reality.  </p>
+          <p> I graduated from the University of Alabama in 2016 with a BS in Computer Science and a Minor in Mathematics. I joined the University of Colorado's VisuaLab, advised by Dr. Danielle Szafir in Fall 2016.</p>
+            <p></p>
         </div>
         <div class="card-action">
-          <a>LinkedIn</a>
+            <img width='300px' style='margin-right:50px' src='img/Affiliations/cu-boulder.png'/> 
+            <img width='300px' style='margin-right:50px' src='img/Affiliations/visualab.png'/> 
+            <img width='300px' style='margin-right:50px' src='img/Affiliations/alabama.png'/>
         </div>
       </div>
     </div>
 </div>
-
-
