--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,31 @@
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
-
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Find Me At:</h5>
+            <p class="grey-text text-lighten-4">
+                <img src="img/contact_logos/google-scholar.png" style="width:62px;"/>
+                <img src="img/contact_logos/linkedin.png" style="width:75px;margin-top:5px;margin-left:10px;"/> 
+                <img src="img/contact_logos/facebook.png" style="width:87px;"/>  
+            </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <ul>
+              <li><b class="grey-text text-lighten-4">Department of Computer Science</b></li>
+              <li><b class="grey-text text-lighten-4">University of Colorado - Boulder</b></li>
+              <li><img src='img/Affiliations/buff.png' style='width:100px;'/></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        <a class="grey-text text-lighten-4 right"></a>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
