--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
         <a href="#">Blog</a>
         <a href="#">Contact</a>
       </nav-->
-    <nav class="nav-extended">
+    <nav class="nav-extended grey darken-3">
         <div class="nav-wrapper">
             <a style="padding-left:20px;" href="#!/home" class="brand-logo">Matt Whitlock</a>
             <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -85,7 +85,7 @@
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
-    <footer class="page-footer">
+    <footer class="page-footer grey darken-3">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
@@ -105,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-copyright">
+      <div class="footer-copyright grey darken-4">
         <div class="container">
         <a class="grey-text text-lighten-4 right"></a>
         </div>
