--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>  <!-- Angular Material Library -->
     <!script src="bower_components/angular-tablesort/js/angular-tablesort.js"><!/script>
 </head>
 <body ng-controller="BodyController"  style="background:gainsboro;">
