New card on homepage

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -13,9 +13,9 @@
         <img src="img/home/tieheadshot.jpg">
       </div>
       <div class="card-stacked">
-        <div class="card-content">
+        <div class="card-content" style=" font-size:24px;">
           <p>I am a PhD Student at the University of Colorado-Boulder in the Department of Computer Science.  My passion is in virtual and augmented reality work, specifically seeking to enable and create useful applications with augmented reality.  </p>
-          <p> I graduated from the University of Alabama in 2016 with a BS in Computer Science and a Minor in Mathematics. I joined the University of Colorado's VisuaLab, advised by Dr. Danielle Szafir in Fall 2016.</p>
+          <p style="padding-top:12px;"> I graduated from the University of Alabama in 2016 with a BS in Computer Science and a Minor in Mathematics. I joined the University of Colorado's VisuaLab, advised by Dr. Danielle Szafir in Fall 2016.</p>
             <p></p>
         </div>
         <div class="card-action">
@@ -24,5 +24,15 @@
             <img width='300px' style='margin-right:50px' src='img/Affiliations/alabama.png'/>
         </div>
       </div>
+    </div>
+    <div class="card horizontal">
+        <div class="card-stacked">
+            <div class="card-content" style=" font-size:24px;">
+                I'm working on some exciting projects and would love to talk about my work and future directions. Feel free to reach out to me to learn more about what I'm doing. dsfadsfasd  fasdfasdfas dfasdfasdfas dfa
+            </div>
+        </div>
+        <div style="margin:20px 20px 20px 20px;float:right;" class="card-image">
+            <img src="img/home/HL-Wiimote.gif">
+        </div>
     </div>
 </div>
