--- a/app/index.html
+++ b/app/index.html
@@ -91,9 +91,9 @@
           <div class="col l6 s12">
             <h5 class="white-text">Find Me At:</h5>
             <p class="grey-text text-lighten-4">
-                <img src="img/contact_logos/google-scholar.png" style="width:62px;"/>
-                <img src="img/contact_logos/linkedin.png" style="width:75px;margin-top:5px;margin-left:10px;"/> 
-                <img src="img/contact_logos/facebook.png" style="width:87px;"/>  
+                <a href="https://scholar.google.com/citations?user=pjN9Sz0AAAAJ&hl=en" target="_blank"><img src="img/contact_logos/google-scholar.png" style="width:62px;"/></a>
+                <a href="https://www.linkedin.com/in/matt-whitlock-54a0605b/" target="_blank"><img src="img/contact_logos/linkedin.png" style="width:75px;margin-top:5px;margin-left:10px;"/> </a>
+                <a href="https://www.facebook.com/mattswhitlock" target="_blank"><img src="img/contact_logos/facebook.png" style="width:87px;"/></a>
             </p>
           </div>
           <div class="col l4 offset-l2 s12">
