--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>  <!-- Angular Material Library -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- Angular Material Library -->
     <!script src="bower_components/angular-tablesort/js/angular-tablesort.js"><!/script>
 </head>
 <body ng-controller="BodyController"  style="background:gainsboro;">
@@ -72,6 +73,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    
+    <link rel="stylesheet" href="app.css">
     
     <script src="app.js"></script>
     <script src="home/home.js"></script>
