--- a/app/home/home.html
+++ b/app/home/home.html
@@ -19,16 +19,25 @@
             <p></p>
         </div>
         <div class="card-action">
-            <img width='300px' style='margin-right:50px' src='img/Affiliations/cu-boulder.png'/> 
-            <img width='300px' style='margin-right:50px' src='img/Affiliations/visualab.png'/> 
-            <img width='300px' style='margin-right:50px' src='img/Affiliations/alabama.png'/>
+            <a target="_blank" href="http://colorado.edu">
+                <img width='250px' style='margin-right:50px' src='img/Affiliations/cu-boulder.png'/> 
+            </a>
+            <a target="_blank" href="http://cmci.colorado.edu/visualab/">
+                <img width='250px' style='margin-right:50px' src='img/Affiliations/visualab.png'/> 
+            </a>
         </div>
       </div>
     </div>
     <div class="card horizontal">
         <div class="card-stacked">
-            <div class="card-content" style=" font-size:24px;">
-                I'm working on some exciting projects and would love to talk about my work and future directions. Feel free to reach out to me to learn more about what I'm doing. dsfadsfasd  fasdfasdfas dfasdfasdfas dfa
+            <div class="card-content">
+                <div class="card-content" style=" font-size:24px;">
+                    I'm working on some exciting projects and would love to talk about my work and future directions. Feel free to reach out to me to learn more about what I'm doing.
+                </div>
+            </div>
+
+            <div class="card-action">
+                <a href="#!/research" target="_top">See My Research</a>
             </div>
         </div>
         <div style="margin:20px 20px 20px 20px;float:right;" class="card-image">
