--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,7 @@
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <!-- Angular Material Library -->
-    <!script src="bower_components/angular-tablesort/js/angular-tablesort.js"><!/script>
+    <link rel="icon" href="img/Affiliations/CU_logo.jpg">
 </head>
 <body ng-controller="BodyController"  style="background:gainsboro;">
     <!--header class="header">
@@ -36,8 +35,8 @@
                 <li><a href="#!/research">Research</a></li>
                 <li><a href="#!/skills">Skills</a></li>
                 <li><a href="#!/cv">CV</a></li>
-                <li><a href="#!/personal">Personal</a></li>   
-                <li><a href="#!/galleries">Galleries</a></li>
+                <!--li><a href="#!/personal">Personal</a></li-->   
+                <!--li><a href="#!/galleries">Galleries</a></li-->
                 <li><a href="#!/contact">Contact</a></li>
 
             </ul>
@@ -45,8 +44,8 @@
                 <li><a href="#!/research">Research</a></li>
                 <li><a href="#!/skills">Skills</a></li>
                 <li><a href="#!/cv">CV</a></li>
-                <li><a href="#!/personal">Personal</a></li>  
-                <li><a href="#!/galleries">Galleries</a></li> 
+                <!--li><a href="#!/personal">Personal</a></li-->  
+                <!--li><a href="#!/galleries">Galleries</a></li--> 
                 <li><a href="#!/contact">Contact</a></li>
             </ul>
         </div>
