--- a/app/research/research.html
+++ b/app/research/research.html
@@ -9,7 +9,7 @@
           <p>{{project.description}}</p>
         </div>
         <div class="card-action">
-          <a ng-if = "project.img_link.length > 0" class="right" href="{{project.img_link}}">{{project.link_name}}</a>
+          <a ng-if = "project.img_link.length > 0" class="right" href="{{project.img_link}}" target="_blank">{{project.link_name}}</a>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
           <p>{{project.description}}</p>
         </div>
         <div class="card-action">
-          <a ng-if = "project.img_link.length > 0" class="right" href="{{project.img_link}}">{{project.link_name}}</a>
+          <a ng-if = "project.img_link.length > 0" class="right" href="{{project.img_link}}" target="_blank">{{project.link_name}}</a>
         </div>
       </div>
     </div>
