--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,9 @@
             <a style="padding-left:20px;" href="#!/home" class="brand-logo">Matt Whitlock</a>
             <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="#!/home">Home</a></li>
                 <li><a href="#!/research">Research</a></li>
-                <li><a href="#!/skills">Skills</a></li>
+                <!--li><a href="#!/skills">Skills</a></li-->
                 <li><a href="#!/cv">CV</a></li>
                 <!--li><a href="#!/personal">Personal</a></li-->   
                 <!--li><a href="#!/galleries">Galleries</a></li-->
@@ -41,8 +42,9 @@
 
             </ul>
             <ul id="mobile-menu" class="side-nav">
+                <li><a href="#!/home">Home</a></li>
                 <li><a href="#!/research">Research</a></li>
-                <li><a href="#!/skills">Skills</a></li>
+                <!--li><a href="#!/skills">Skills</a></li-->
                 <li><a href="#!/cv">CV</a></li>
                 <!--li><a href="#!/personal">Personal</a></li-->  
                 <!--li><a href="#!/galleries">Galleries</a></li--> 
