--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script-->
-    <script type="text/javascript" src="components/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="components/jquery.min.js"></script>
      <script src="components/materialize.min.js"></script>
     <link rel="icon" href="img/Affiliations/CU_logo.jpg">
 </head>
@@ -66,8 +66,8 @@
     <link rel="stylesheet" href="components/materialize.min.css">
 
     
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script><!-- Materialize CSS -->
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script><!-- Materialize CSS -->
 
     <!-- JavaScript for: jQuery, angular, materialize, and angular-materialize. All of which are needed. -->
     <script type="text/javascript" src="components/materialize.js"></script>
