--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           </div>
           <div class="col l4 offset-l2 s12">
             <ul>
-              <li><b class="grey-text text-lighten-4">Department of Computer Science</b></li>
-              <li><b class="grey-text text-lighten-4">University of Colorado - Boulder</b></li>
+              <li><b id="dept_CS" class="grey-text text-lighten-4">Department of Computer Science</b></li>
+              <li><b id="Univ_Colo" class="grey-text text-lighten-4">University of Colorado - Boulder</b></li>
               <li><img src='img/Affiliations/buff.png' style='width:100px;'/></li>
             </ul>
           </div>
