First 5 mo. 2019 changes

--- a/home/home.html
+++ b/home/home.html
@@ -59,6 +59,24 @@
     
     </div>
     <div id="timeline" class="box">
+        <h1>2019</h1>
+        <ul id="2019-list">
+            <li>
+                <span></span>
+                <div class="title">National Renewable Energy Lab (NREL)</div>
+                <div class="info">Began internship with NREL's Data, Analysis & Visualization group; advised by Kenny Gruchalla</div>
+                <div class="name" ng-if= "!includeMobileTemplate" ><i class="medium material-icons">work</i></div>
+                <div class="time">
+                    <span>MAY</span>
+                </div>
+            </li>
+            <li>
+                <span></span>
+                <div class="title">ACM CHI 2019</div>
+                <div class="info">Workshop paper titled "Situated Prototyping of Data-Driven Applications in Augmented Reality accepted for the Immersive Analytics Workshop <i>(1<sup>st</sup> Author)</i>. </div>
+                <div class="name" ng-if= "!includeMobileTemplate" ><i class="medium material-icons">description</i></div>
+            </li>
+        </ul>
         <h1>2018</h1>
             <ul id="2018-list">
                 <li>
